# swsh

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  docker.sh  electron.sh  flake.nix  package.json
.github/: test.yml
.github/workflows/: pull-request.yml  release-desktop-windows.yml  release-server.yml  release.yml  test.yml
apps/client/: eslint.config.js  index.html  package.json
apps/client/src/: index.css  main.tsx  types.ts  vite-env.d.ts
apps/client/src/helpers/: auth.ts  browser-logger.ts  get-file-url.ts  storage.ts  upload-file.ts
apps/client/src/hooks/: use-upload-files.ts
apps/client/src/lib/: trpc.ts
apps/client/src/runtime/: desktop-bridge.ts  server-config.ts  types.ts
apps/desktop/: eslint.config.js  package.json  tsconfig.json
apps/desktop/scripts/: prepare-renderer-dist.mjs
apps/desktop/sidecar/: Cargo.toml
apps/desktop/sidecar/src/: main.rs
apps/desktop/src/main/: capture-sidecar-manager.ts  index.ts  platform-capabilities.ts  screen-share.ts  settings-store.ts  types.ts  updater.ts  window-open-policy.ts
apps/desktop/src/preload/: index.ts
apps/server/: package.json
apps/server/src/: config.ts  declarations.d.ts  index.ts
apps/server/src/__tests__/: helpers.ts  seed.ts  setup.ts
apps/server/src/db/: index.ts  publishers.ts  schema.ts  seed.ts
apps/server/src/helpers/: get-ws-info.ts  password.ts
apps/server/src/http/: auth-tokens.ts  helpers.ts  index.ts  info.ts  (+5 more)
data-test/: config.ini
docs/desktop/: screenshare-popout-qa.md  troubleshooting.md
docs/docker/: docker-compose.yaml
(+271 files in other folders)
