[package]
name = "sharkord-capture-sidecar"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.22.1"
bytemuck = "1.20.0"
deep_filter = { git = "https://github.com/Rikorose/DeepFilterNet.git", package = "deep_filter", default-features = false, features = ["tract", "logging", "default-model"] }
ndarray = "0.15.6"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tract-core = "=0.21.4"
tract-hir = "=0.21.4"
tract-onnx = "=0.21.4"
tract-pulse = "=0.21.4"
uuid = { version = "1.11.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
  "implement",
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.58.0"
